following cleanup suggestions from IDE